--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#8F60B7</color>
+    <color name="colorWhite">#FFFF</color>
+    <color name="colorLightGray">#C3C2C2</color>
+    <color name="colorTextDark">#202020</color>
+    <color name="colorDelimeterLight">#D9D7D7</color>
 </resources>
