--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#F0F0F0</color>
     <color name="colorAccent">#8F60B7</color>
     <color name="colorWhite">#FFFF</color>
-    <color name="colorLightGray">#C3C2C2</color>
-    <color name="colorTextDark">#202020</color>
+    <color name="colorLightGray">#F0F0F0</color>
+    <color name="colorTextDark">#414141</color>
+    <color name="colorTextLight">#D9D7D7</color>
     <color name="colorDelimeterLight">#D9D7D7</color>
 </resources>
