--- a/app/src/main/res/layout/fragment_add_teacher.xml
+++ b/app/src/main/res/layout/fragment_add_teacher.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:paddingVertical="16dp"
     android:paddingHorizontal="24dp"
     android:transitionName="checkoutTransition">
