Divided repository into submodules, implemented TeacherService, AuthenticationService. Added some model data classes.

--- a/app/src/main/res/layout/dialog_add_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_add_item_bottom_sheet.xml
@@ -15,20 +15,17 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
             android:src="@mipmap/sparcle_plus_48dp"
-            app:tint="@color/colorTextDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/colorTextDark" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/add_item"
             android:textColor="@color/colorTextDark"
             android:textSize="24sp"
