--- a/app/src/main/res/layout/fragment_add_teacher.xml
+++ b/app/src/main/res/layout/fragment_add_teacher.xml
@@ -49,9 +49,10 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@drawable/round_button_accent"
         android:text="@string/add_teacher"
+        android:elevation="8dp"
         android:textSize="20sp"
         android:textAllCaps="false"
         app:backgroundTint="@null"/>
