--- a/app/src/main/res/layout/fragment_today_custom_action_bar.xml
+++ b/app/src/main/res/layout/fragment_today_custom_action_bar.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorWhite"
+    android:elevation="12dp">
 
     <TextView
         android:id="@+id/text_date"
@@ -41,8 +42,9 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/ripple_oval_gray"
-        android:elevation="8dp"
+        android:elevation="0dp"
         android:src="@drawable/ic_add_50dp"
         app:layout_constraintBottom_toBottomOf="@+id/text_day"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
