--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -102,6 +102,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/continue_offline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
