--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -30,11 +30,11 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="100dp"
+        android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingHorizontal="34dp"
-        android:clipToPadding="false"
         android:paddingBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,10 +43,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
-            android:text="@string/login"
+            android:text="@string/register"
             android:textColor="@color/colorTextDark"
             android:textSize="30sp" />
 
@@ -59,14 +59,56 @@
             android:textSize="18sp" />
 
         <EditText
+            android:id="@+id/login_input"
             android:layout_width="match_parent"
             android:layout_height="34dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/round_button_gray"
             android:inputType="textNoSuggestions"
             android:padding="8dp"
             android:paddingStart="16dp"
-            android:textColor="@color/colorLightGray" />
+            android:textColor="@color/colorTextDark" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/first_name"
+            android:textColor="@color/colorTextDark"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/first_name_input"
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/round_button_gray"
+            android:inputType="textNoSuggestions"
+            android:padding="8dp"
+            android:paddingStart="16dp"
+            android:textColor="@color/colorLightGray"
+            tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/last_name"
+            android:textColor="@color/colorTextDark"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/last_name_input"
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/round_button_gray"
+            android:hint="@string/optional"
+            android:inputType="textNoSuggestions"
+
+            android:paddingStart="16dp"
+            android:textColor="@color/colorLightGray"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -77,60 +119,80 @@
             android:textSize="18sp" />
 
         <EditText
+            android:id="@+id/password_input"
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/round_button_gray"
+            android:inputType="textPassword"
+            android:padding="8dp"
+            android:paddingStart="16dp"
+            android:textColor="@color/colorLightGray"
+            tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/repeat_password"
+            android:textColor="@color/colorTextDark"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/repeat_password_input"
             android:layout_width="match_parent"
             android:layout_height="34dp"
             android:layout_marginBottom="26dp"
             android:background="@drawable/round_button_gray"
-            android:hint="@string/optional"
-            android:inputType="textNoSuggestions"
+            android:inputType="textPassword"
             android:padding="8dp"
             android:paddingStart="16dp"
             android:textColor="@color/colorLightGray"
             tools:ignore="RtlSymmetry" />
 
         <Button
+            android:id="@+id/create_account"
             android:layout_width="match_parent"
             android:layout_height="41dp"
             android:background="@drawable/round_button_accent"
             android:elevation="8dp"
             android:insetTop="0dp"
-            android:text="@string/log_in"
+            android:insetBottom="0dp"
+            android:text="@string/create_account"
             android:textAllCaps="false"
             android:textSize="18sp"
             app:backgroundTint="@null" />
-
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:paddingHorizontal="34dp"
         android:paddingBottom="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.929">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:gravity="center"
-            android:text="@string/bottom_label_login"
+            android:text="@string/bottom_label_register"
             android:textColor="@color/colorTextDark"
             android:textSize="18sp" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:background="@drawable/round_button_accent"
-            android:elevation="8dp"
-            android:insetTop="0dp"
-            android:text="@string/register"
-            android:textAllCaps="false"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
-            app:backgroundTint="@null" />
+            android:layout_marginStart="14dp"
+            android:text="@string/log_in"/>
 
     </LinearLayout>
 
