--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -122,6 +122,7 @@
             android:textSize="18sp" />
 
         <Button
+            android:id="@+id/register_button"
             android:layout_width="match_parent"
             android:layout_height="41dp"
             android:background="@drawable/round_button_accent"
